--- a/mental.html
+++ b/mental.html
@@ -24,7 +24,7 @@
             <img src="photos/girlbeach.jpg">
             <p>Mental Health Disorders, refers to a wide range of mental health conditions, these disorders can affect a
                 person's mood, think and behavior. Such mental illness would be anxiety, depression, eating disorders
-                and addictive behaviors. It's Normal for pepelat to have mental health concerns from time to time. But
+                and addictive behaviors. It's Normal for people to have mental health concerns from time to time. But
                 it becomes concerning a mental illness when the same ongoing signs affect your ability to function in
                 the community.
                 <br>
