Final draft, Fixed spelling/ Grammar and cleaned up white space

--- a/mental.html
+++ b/mental.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <img src="photos/brotherlogo.jpg" alt="logo">
-        <h2>"Some times you can't do it alone"</h3>
+        <p>"Sometimes you can't do it alone"</p>
     </header>
     <main>
         <h2 class="mission"> <strong>Mission:</strong> <br>In an effort to combat mental illness on college campuses, we strive to inform students
@@ -20,26 +20,20 @@
             the stigma regarding mental health and encourage all to seek professional help.</h2>
 
         <section class="health">
-            <h3>What is mental health?</h3>
+            <h3>What Are Mental Health Issues?</h3>
             <img src="photos/girlbeach.jpg">
-            <p>Mental Health Disorders, refers to a wide range of mental health conditions, these disorders can affect a
-                person's mood, think and behavior. Such mental illness would be anxiety, depression, eating disorders
-                and addictive behaviors. It's Normal for people to have mental health concerns from time to time. But
-                it becomes concerning a mental illness when the same ongoing signs affect your ability to function in
-                the community.
+            <p>Mental Health Issues, refer to a wide range of mental health conditions. These disorders can affect a person's mood, thought, and behavior. Common mental illnesses include anxiety, depression, eating disorders, and addictive behaviors. It is normal for people to face challenges with their mental health from time to time. However, when mental illness continues and no treatment is sought, an individual's ability to function in the community will decline. 
                 <br>
                 <a href="www.mayoclinic.org/diseases-conditions/mental-illness/symptoms-causes/syc-20374968">“Mental Illness.” Mayo Clinic, Mayo Foundation for Medical Education and Research, 8 June
-                2019, www.mayoclinic.org/diseases-conditions/mental-illness/symptoms-causes/syc-20374968.</a></p>
+                2019.</a></p>
         </section>
 
         <section class="anxiety">
-            <h3>What is anxiety?</h3>
-            <img src="photos/redshirtteen.jpg">
-            <p>You might feel anxious when faced with a stressful problem at work, before taking a huge test, or before
-                making an important life decision.More serious than this Anxiety has the power to take away a person's
-                life , and drive a person to the edge making it unbearable to live. What would be the risk factor in
-                having Anxiety? Well here are some examples of Anxiety can cause given by the National Institute of
-                Mental Health.</p>
+            <h3>What Is Anxiety?</h3>
+            <img src="photos/rsz_fernando-cferdo-6x2ikgi6spu-unsplash.jpg">
+            <p>You might feel anxious when faced with a stressful problem at work, before taking a huge test, or before making an important life decision. Everyone experiences common stress; however, there are some that are afflicted with a more chronic and serious form of stress specifically called “anxiety”. Anxiety has the power to take away a person's life, and drive a person to the edge, making it unbearable to live.
+                What effects does anxiety have? Here are some examples from a study by the National Institute of Mental Health.
+                </p>
             <ul>
                 <li>Feeling restless, wound-up, or on-edge</li>
                 <li>Being easily fatigued</li>
@@ -52,17 +46,12 @@
         </section>
 
         <section class="depression">
-            <h3>What is depression?</h3>
+            <h3>What is Depression?</h3>
             <img src="photos/sadbag.jpg">
-            <p>A serious mood disorder that affects how you feel, think and handle daily activities, such as sleeping,
-                eating, or working. Any form of depression that lasts longer than other series of two weeks would be the
-                person suffering from deep depression. Depression can happen at any age that affects its host with loss
-                of interest and decreased energy and fatigue.
+            <p>Depression is a serious mood disorder that affects how you feel about, think about, and handle daily activities. Any case of depression that lasts longer than a series of two weeks would be considered suffering from deep depression. Depression can happen at any age and affects its host with loss of interest and decreased energy and fatigue.
                 <a href="www.nimh.nih.gov/search?q=depression%2B">“Search.” National Institute of Mental Health, U.S.
-                    Department of Health and Human Services, www.nimh.nih.gov/search?q=depression%2B.</a></p>
+                    Department of Health and Human Services.</a></p>
         </section>
-
-        <h2 class="help">How to help</h2>
 
         <section class="signs">
             <h3>Common Signs</h3>
@@ -86,27 +75,42 @@
                 <li>Frequent/reoccurring thoughts of suicide</li>
             </ul>
          </section>
+
+        <h2 class="help">How to help</h2>
+
         <section class="sidexsideLeft">
-            <p><strong>DO:</strong> Validate and take their feelings seriously, let them talk, commiserate, but don’t
-                say that you “understand”, let them know about other support services (counseling groups, doctors,
-                support positive dialogue of medication, respond to emergencies, take care of yourself (make sure that
-                you have someone you can talk to, don’t try to fix every problem). Stay aware of resources in your area
-                so you can share information</p>
+            <p><strong>DO:</strong></p>
+            <ul>
+                <li>Validate and take their feelings seriously</li>
+                <li>Commiserate, but don’t say that you “understand”</li>
+                <li>Let them know about other support services (counseling groups, doctors, medication)</li>
+                <li>Respond to emergencies</li>
+                <li>Take care of yourself first</li>
+                <li>Stay aware of resources in your area so you can share information </li>
+            </ul>
         </section>
         <section class="sidexsideRight">
-            <p><strong>DON'T:</strong> tell them to “snap out of it”, encourage unhealthy coping habits (drugs/alcohol),
-                avoid them after they open up to you, judge or criticise, assume the problem will resolve itself, imply
-                that they are a burden *always ask permission to contact help on behalf of a friend or peer, unless you
-                fear that they may be in immediate danger</p>
+            <p><strong>DON'T:</strong> </p>
+            <ul>
+                <li>Tell them to “snap out of it”</li>
+                <li>Encourage unhealthy coping habits (drugs/alcohol)</li>
+                <li>Avoid them after they open up to you </li>
+                <li>Judge or criticize</li>
+                <li>Assume the problem will resolve itself </li>
+                <li>Imply that they are a burden</li>
+            </ul>
         </section>
     </main>
     <footer>
-        <p>Resources</p>
+        <p id="hed">Resources</p>
+        <p>Mental Illness varies by person and situation. We encourage college students to be aware of mental health and ways to help others who have been afflicted with a mental illness. If you wish to learn more about a specific kind of mental illness and ways to recognize it, we encourage you to click on the links.</p>
         <ul>
-            <li><a href="https://www.byui.edu/counseling-center/">https://www.byui.edu/counseling-center/</a></li>
-            <li><a href="https://www.byui.edu/wellness-center">https://www.byui.edu/wellness-center</a></li>
-            <li><a href="https://www.nami.org/About-Mental-Illness/Warning-Signs-and-Symptoms">https://www.nami.org/About-Mental-Illness/Warning-Signs-and-Symptoms</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/topics/families-and-individuals/lifes-challenges/hope-and-help?lang=eng">https://www.churchofjesuschrist.org/topics/families-and-individuals/lifes-challenges/hope-and-help?lang=eng</a></li>
+            <li><a href="https://www.byui.edu/counseling-center/">BYUI Counseling Center</a></li>
+            <li><a href="https://www.byui.edu/wellness-center">Wellness Center - BYU-I</a></li>
+            <li><a href="https://www.nami.org/About-Mental-Illness/Warning-Signs-and-Symptoms">Know the Warning Signs</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/topics/families-and-individuals/lifes-challenges/hope-and-help?lang=eng">The Church Of Jesus Christ’s Life Help resources</a></li>
+            <li><a href="https://depression.org.nz/is-it-depression-anxiety/self-test/">Mental Health Self Test</a></li>
+            <li><a href="https://medlineplus.gov/mentaldisorders.html">Mental Health and Disorders</a></li>
         </ul>
     </footer>
 </body>
